<resources>
    <string name="app_name">Bluetooth</string>
    <string name="action_ok">OK</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_terminal">Clear terminal</string>
    <string name="action_apply">Apply</string>
    <string name="action_macros_by_name">By Name</string>
    <string name="action_macros_by_command">By Command</string>
    <string name="connection">Connection</string>
    <string name="macros">Macros</string>
    <string name="pots">Pots</string>
    <string name="terminal_date_color">#dfdfdf</string>
    <string name="terminal_entry_color">#f1c345</string>
    <string name="terminal_warning_color">#ff7b00</string>
    <string name="macro_name_label">Name</string>
    <string name="macro_command_label">Command (value from 0 to 253)</string>
    <string name="edit_macro">Edit Macro</string>
    <string name="confirmation_dialog">Confirmation dialog</string>
    <string name="main_confirmation_dialog_message">Are you sure you want to send this command?</string>
    <string name="main_confirmation_dialog_accept">Yes</string>
    <string name="main_confirmation_dialog_cancel">No</string>
    <string name="grey">Grey</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="sea">Sea</string>
    <string name="m1">M1</string>
    <string name="m2">M2</string>
    <string name="m3">M3</string>
    <string name="m4">M4</string>
    <string name="m5">M5</string>
    <string name="m6">M6</string>
    <string name="m7">M7</string>
    <string name="m8">M8</string>
    <string name="m9">M9</string>
    <string name="m10">M10</string>
    <string name="m11">M11</string>
    <string name="m12">M12</string>
    <string name="m13">M13</string>
    <string name="m14">M14</string>
    <string name="m15">M15</string>
    <string name="m16">M16</string>
    <string name="m17">M17</string>
    <string name="m18">M18</string>
    <string name="m19">M19</string>
    <string name="m20">M20</string>
    <string name="m21">M21</string>
    <string name="m22">M22</string>
    <string name="m23">M23</string>
    <string name="m24">M24</string>
    <string name="m25">M25</string>
    <string name="m26">M26</string>
    <string name="m27">M27</string>
    <string name="m28">M28</string>
    <string name="m29">M29</string>
    <string name="m30">M30</string>
    <string name="m31">M31</string>
    <string name="m32">M32</string>
</resources>
