<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        android:icon="@drawable/unplugged"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear_terminal"
        android:orderInCategory="100"
        android:title="@string/action_clear_terminal"
        android:icon="@drawable/clear_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always" />
</menu>
